--- a/AspMVCECommerce/Views/Home/ShoppingCart.cshtml
+++ b/AspMVCECommerce/Views/Home/ShoppingCart.cshtml
@@ -37,7 +37,7 @@
                         <h3 class="title">Line Items</h3>
                     </div>
 
-                    <table class="table  table-responsive table-hover" id="table-cart-line-items" style="border-right: 1px solid #E4E7ED; border-left: 1px solid #E4E7ED; border-bottom: 1px solid #E4E7ED;">
+                    <table class="table  table-responsive table-hover table-striped" id="table-cart-line-items" style="border-right: 1px solid #E4E7ED; border-left: 1px solid #E4E7ED; border-bottom: 1px solid #E4E7ED;">
                         <tr style="text-transform:uppercase;">
                  
                             <th>
